--- a/youtube_player_webapp/src/index.template.html
+++ b/youtube_player_webapp/src/index.template.html
@@ -15,6 +15,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
     <link rel="icon" type="image/ico" href="favicon.ico">
     <script src="https://accounts.google.com/gsi/client" async></script>
+    <script src="https://apis.google.com/js/api.js"></script>
   </head>
   <body>
     <!-- DO NOT touch the following DIV -->
